--- a/public/src/styles/style.css
+++ b/public/src/styles/style.css
@@ -1,4 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
 :root {
   --v-primary-color-white: #ffffff;
-  --v-primary-color-gray: #1E1E1E;
+  --v-primary-color-red: #8B1414;
+  --v-primary-color-skin: #F2E2C4;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: var(--v-primary-color-white);
+}
+
+body {
+  background-color: var(--v-primary-color-red);
 }/*# sourceMappingURL=style.css.map */
