--- a/public/src/styles/style.scss
+++ b/public/src/styles/style.scss
@@ -32,7 +32,7 @@ body {
             width: 100%;
             background-image: url("../../assets/background-header.png");
             background-size: cover;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
 
             .header-container {
                 display: flex;
@@ -95,9 +95,8 @@ body {
         .section-container {
             background-image: url("../../assets/background-main.png");
             background-size: cover;
-            background-repeat: no-repeat;
-            background-position: top;
-            
+            background-repeat: repeat-y;
+
             article {
                 display: flex;
                 justify-content: center;
@@ -120,16 +119,59 @@ body {
 
         .gallery-container {
             display: flex;
-            justify-content: space-around;
-            align-items: center;
             flex-wrap: wrap;
+            justify-content: space-evenly;
+            align-items: center;
+            gap: 1rem;
             width: 100%;
             background-color: var(--v-primary-color-skin);
             height: 80%;
 
             img {
-                width: 30%;
+                height: 60%;
             }
         }
+    }
+
+    footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 10%;
+        background-image: url("../../assets/background-main.png");
+        background-size: cover;
+        background-repeat: repeat-y;
+        padding: 0 1rem;
+
+        .footer-cotact {
+            img {
+                width: 10%;
+                height: auto;
+            }
+        }
+
+        .footer-info {
+            p {
+                text-align: center;
+                font-size: 1.5rem;
+                font-weight: 400;
+            }
+        }
+
+        .footer-image {
+            width: 10%;
+            height: auto;
+        }
+    }
+}
+
+@media (max-width: 2908px) {
+    .gallery-container img {
+        height: 1%;
+    }
+}
+
+@media (max-width: 2188px) {
+    .gallery-container img {
     }
 }
